swagger fix
