# docs/swagger.json
@@ -23,6 +23,12 @@
                 ],
                 "summary": "get all requests and responses",
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseProxy"
+                        }
+                    },
                     "502": {
                         "description": "Internal server error",
                         "schema": {
@@ -50,11 +56,17 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/proxy.RequestProxy"
+                            "$ref": "#/definitions/models.RequestProxy"
                         }
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseProxy"
+                        }
+                    },
                     "400": {
                         "description": "Invalid request body",
                         "schema": {
@@ -93,6 +105,12 @@
                     }
                 ],
                 "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseProxy"
+                        }
+                    },
                     "400": {
                         "description": "Invalid request body",
                         "schema": {
@@ -110,7 +128,7 @@
         }
     },
     "definitions": {
-        "proxy.RequestProxy": {
+        "models.RequestProxy": {
             "type": "object",
             "properties": {
                 "headers": {
@@ -124,6 +142,26 @@
                 },
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "models.ResponseProxy": {
+            "type": "object",
+            "properties": {
+                "headers": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "length": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         }
