# internal/handler/proxy.go
@@ -23,8 +23,8 @@ func NewHandler(store *store.Store) *Proxy {
 // @Description create request
 // @Accept 	json
 // @Produce json
-// @Param input body proxy.RequestProxy true "request data"
-// @Success 200 {object} models.ProxyResponse
+// @Param input body models.RequestProxy true "request data"
+// @Success 200 {object} models.ResponseProxy
 // @Failure 400 {object} string "Invalid request body"
 // @Failure 502 {object} string "Internal server error"
 // @Router /proxy [post]
@@ -63,7 +63,7 @@ func (p *Proxy) HandleProxy(c *gin.Context) {
 // @Description get all history
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.ProxyResponse
+// @Success 200 {object} models.ResponseProxy
 // @Failure 502 {object} string "Internal server error"
 // @Router /proxy [get]
 func (p *Proxy) GetStore(c *gin.Context) {
@@ -83,7 +83,7 @@ func (p *Proxy) GetStore(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path string true "request id"
-// @Success 200 {object} models.ProxyResponse
+// @Success 200 {object} models.ResponseProxy
 // @Failure 400 {object} string "Invalid request body"
 // @Failure 502 {object} string "Internal server error"
 // @Router /proxy/{id} [get]
